--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,15 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <title>Warda Asad - Full Stack Developer</title>
+  <!-- PrimeNG Theme -->
+<link href="https://cdn.jsdelivr.net/npm/primeng@15.4.1/resources/themes/lara-light-blue/theme.css" rel="stylesheet" />
+
+<!-- PrimeNG Core -->
+<link href="https://cdn.jsdelivr.net/npm/primeng@15.4.1/resources/primeng.min.css" rel="stylesheet" />
+
+<!-- PrimeIcons -->
+<link href="https://cdn.jsdelivr.net/npm/primeicons@7.0.0/primeicons.css" rel="stylesheet" />
+
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="favicon.png" />
   <!-- Font Awesome icons (free version)-->
